# aeroapi-python

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: pytest.yml
aeroapi_python/: Airports.py  History.py
examples/: airport.py  flight.py  history.py  misc.py  operator.py
src/aeroapi_python/: APICaller.py  AeroAPI.py  Airports.py  Flights.py  History.py  Miscellaneous.py  Operators.py  __about__.py  __init__.py
tests/: test_APICaller.py
